# lan-speed-test

./: Cargo.toml  README.md  build.sh
src/: client.rs  lib.rs  server.rs  service_discovery.rs
